--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ FortranCInterface_Header(FCMangle.h)
 include_directories("${phastaIO_BINARY_DIR}")
 add_definitions(-DMPICH_SKIP_MPICXX)
 add_definitions(-DOMPI_SKIP_MPICXX=1)
-set(SRC_FILES phastaIO.cc)
+set(SRC_FILES phiotmrc.cc phastaIO.cc)
 
 ADD_LIBRARY(phastaIO ${SRC_FILES})
 target_link_libraries(phastaIO ${MPI_C_LIBRARIES})
